--- a/src/.env.example
+++ b/src/.env.example
@@ -17,7 +17,7 @@ OPENAI_API_KEY= ""
 OPENAI_API_URL= 
 COHERE_API_KEY= ""
 
-GENERATION_MODEL_ID="gpt-3.5-turbo-0125"
+GENERATION_MODEL_ID="gemma2:9b-instruct-q5_0"
 EMBEDDING_MODEL_ID="embed-multilingual-light-v3.0"
 EMBEDDING_MODEL_SIZE=384
 
