--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -7,7 +7,7 @@ aiofiles==23.2.1
 langchain==0.1.20
 PyMuPDF==1.24.3
 motor==3.6.0
-openai
+openai==1.66.3
 tokenizers==0.15.0
 cohere==5.5.8
 qdrant-client==1.10.1
@@ -15,3 +15,5 @@ SQLAlchemy==2.0.36
 asyncpg==0.30.0
 alembic==1.14.0
 psycopg2==2.9.10
+pgvector==0.4.0
+nltk==3.9.1
